--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --experimental-modules main.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "http": "^0.0.1-security",
-    "path": "^0.12.7",
     "socket.io": "^4.0.1"
   }
 }
